{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 38,
  "lineage": "ce577778-8131-3493-2333-b1f7628e9a84",
  "resources": [
    {
      "module": "module.aline_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052911266688:internet-gateway/igw-0c902220bc8ee8054",
            "id": "igw-0c902220bc8ee8054",
            "owner_id": "052911266688",
            "tags": {
              "Name": "aline-vpc"
            },
            "tags_all": {
              "Name": "aline-vpc"
            },
            "vpc_id": "vpc-08cf69ab415be3bfc"
          },
          "dependencies": [
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aline_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c902220bc8ee8054",
            "id": "r-rtb-095ef18398df57db51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095ef18398df57db5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aline_vpc.aws_internet_gateway.this",
            "module.aline_vpc.aws_route_table.public",
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aline_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052911266688:route-table/rtb-095ef18398df57db5",
            "id": "rtb-095ef18398df57db5",
            "owner_id": "052911266688",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c902220bc8ee8054",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aline-vpc-public"
            },
            "tags_all": {
              "Name": "aline-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf69ab415be3bfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aline_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06952ed78e973a90a",
            "route_table_id": "rtb-095ef18398df57db5",
            "subnet_id": "subnet-0973473853bd8db60"
          },
          "dependencies": [
            "module.aline_vpc.aws_route_table.public",
            "module.aline_vpc.aws_subnet.public",
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fdbcd3e20fd671a",
            "route_table_id": "rtb-095ef18398df57db5",
            "subnet_id": "subnet-0b049ac854e11e22d"
          },
          "dependencies": [
            "module.aline_vpc.aws_route_table.public",
            "module.aline_vpc.aws_subnet.public",
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aline_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052911266688:subnet/subnet-0973473853bd8db60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0973473853bd8db60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052911266688",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aline-vpc-public-us-east-1a",
              "Network": "Public",
              "VPC": "vpc-08cf69ab415be3bfc",
              "kubernetes.io/cluster/lf-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aline-vpc-public-us-east-1a",
              "Network": "Public",
              "VPC": "vpc-08cf69ab415be3bfc",
              "kubernetes.io/cluster/lf-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08cf69ab415be3bfc"
          },
          "dependencies": [
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052911266688:subnet/subnet-0b049ac854e11e22d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b049ac854e11e22d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052911266688",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aline-vpc-public-us-east-1b",
              "Network": "Public",
              "VPC": "vpc-08cf69ab415be3bfc",
              "kubernetes.io/cluster/lf-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aline-vpc-public-us-east-1b",
              "Network": "Public",
              "VPC": "vpc-08cf69ab415be3bfc",
              "kubernetes.io/cluster/lf-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08cf69ab415be3bfc"
          },
          "dependencies": [
            "module.aline_vpc.aws_vpc.this",
            "module.aline_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aline_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052911266688:vpc/vpc-08cf69ab415be3bfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/18",
            "default_network_acl_id": "acl-050d1dbf7d639b436",
            "default_route_table_id": "rtb-0136977d5513b8edf",
            "default_security_group_id": "sg-0bcfa2b49995bd29a",
            "dhcp_options_id": "dopt-0c98401698bdd4b9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cf69ab415be3bfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0136977d5513b8edf",
            "owner_id": "052911266688",
            "tags": {
              "Name": "aline-vpc"
            },
            "tags_all": {
              "Name": "aline-vpc"
            }
          }
        }
      ]
    }
  ]
}